// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should be able to render python models and should generate \`explicit\` imports for models implementing referenced types: model 1`] = `
Array [
  "from .ObjProperty import ObjProperty

class Root: 
  def __init__(self, input):
    if hasattr(input, 'email'):
    	self._email = input.email
    if hasattr(input, 'objProperty'):
    	self._objProperty = input.objProperty

  @property
  def email(self):
  	return self._email
  @email.setter
  def email(self, email):
  	self._email = email

  @property
  def objProperty(self):
  	return self._objProperty
  @objProperty.setter
  def objProperty(self, objProperty):
  	self._objProperty = objProperty
",
]
`;

exports[`Should be able to render python models and should generate \`implicit\` imports for models implementing referenced types: model 1`] = `
Array [
  "from ObjProperty import ObjProperty

class Root: 
  def __init__(self, input):
    if hasattr(input, 'email'):
    	self._email = input.email
    if hasattr(input, 'objProperty'):
    	self._objProperty = input.objProperty

  @property
  def email(self):
  	return self._email
  @email.setter
  def email(self, email):
  	self._email = email

  @property
  def objProperty(self):
  	return self._objProperty
  @objProperty.setter
  def objProperty(self, objProperty):
  	self._objProperty = objProperty
",
]
`;
